k8s/stable-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vibe-app-stable
  namespace: vibe

spec:
  selector:
    app: vibe-app

  ports:
    - port: 80
      targetPort: 8000
